about us content edit

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                   <strong>Location:</strong> 2F Gloriana Bella Building, South Poblacion, Valencia, Negros Oriental.
                 </p>
                 <p class="fst-italic">
-                  In 2008, our culinary journey began, giving rise to The Summerhouse Cafe & Restobar—a dynamic establishment at the intersection of gastronomy and vibrant nightlife. From our roots to the heartbeat of our owner's family, our venue holds a special place, once owned by our grandmother and now transformed into a multifaceted space where culinary excellence meets spirited revelry.
+                  In 2008, our culinary journey began, giving rise to The Summerhouse Cafe & Restobar—a dynamic establishment at the intersection of gastronomy and vibrant nightlife. From the roots to the heartbeat of our owner's family, our venue holds a special place, once owned by the owners' grandmother and now transformed into a multifaceted space where culinary excellence meets spirited revelry.
                 </p>
                 <p>
                   The Summerhouse Cafe & Restobar is a celebration of family, tradition, and the evolution of taste. What started as a restaurant has blossomed into a haven for those seeking both delectable dining experiences and vibrant nightlife escapades.
